<resources>
    <string name="app_name">TecHub</string>
    <string name="ect">All in one touch!</string>
    <string name="sl">Ur Way to Smart Life</string>
    <string name="name">Name: Haitham Salama </string>
    <string name="num">Phone: +201007999462 </string>
    <string name="mail">E-mail: haithamsalama92@gmail.com </string>
    <string name="web">www.techclubeg.com</string>

</resources>
